--- a/gasp1/simple1/style.css
+++ b/gasp1/simple1/style.css
@@ -1,9 +1,9 @@
 div.anim {
     width: 20px;
     height: 20px;
-    background-color: bisque;
+    background-color: rgb(232, 62, 19);
     position: absolute;
-    border-radius: 20px;
+    border-radius: 5px;
 }
 
 img {
