--- a/gasp1/ui/style.css
+++ b/gasp1/ui/style.css
@@ -53,14 +53,20 @@ protein,amino acid,fiber,starch,glucose,oxygen,carbon dioxide,water
 }
 
 body{ margin: 0; background: #ccc;}
-.bottom-card{position: absolute;bottom: 20px;width:calc(100vw - 400px);left:20px}
+
+.bottom-card{
+  position: absolute;bottom: 0;left:50%; transform: translateX(-50%); font-family: Arial, Helvetica, sans-serif; font-size: 12px;
+}
+.bottom-card h4{ font-size: 12px; padding: 0 0 8px; margin: 0;}
+
 .bottom-card-inner{
     background-color: #fafafa;
     border-radius:4px;
     padding: 16px;
     display: flex;
-    gap:10px;
+    gap:20px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
 .card{
     border:1px solid #cecece;
@@ -70,8 +76,15 @@ body{ margin: 0; background: #ccc;}
     display: flex;
     flex-direction: column;
     position: relative;
+    display: flex;
+    justify-content: space-between;
 }
- 
+
+.disable{
+  opacity: 0.5;
+  background:#ebebeb;
+}
+
 .card-img{
     height:50%;
     display: flex;
@@ -81,10 +94,10 @@ body{ margin: 0; background: #ccc;}
 }
 .card-img img{max-width: 25px;}
 .card-title{
-    font-size: 16px;
+    font-size: 12px;
     background:#ebebeb;
     color:#000000;
-    min-height:50%;
+    
     padding: 6px;
     text-align: center;
     display: flex;
