getAllpath dynamic path

--- a/gasp1/ui_1/style.css
+++ b/gasp1/ui_1/style.css
@@ -149,3 +149,9 @@ div.corn{
 div.anim1{
   background-color: blueviolet;
 }
+div.protien{
+  background-color: #7cee1f;
+}
+div.starch{
+  background-color: #d711e9;
+}
